bugfix: fixes some spacing issues on p and nav

--- a/style.css
+++ b/style.css
@@ -40,9 +40,11 @@ h1,
   font-size: 1.2em;
   border-radius: 15px;
   padding: 10px;
-  margin-bottom: 10px;
   background-color: #22D351;
   color: #FFFFFF;
+  margin: auto;
+  margin-bottom: 10px;
+  margin-left: 0px;
 }
 
 .log img {
@@ -71,6 +73,7 @@ h1,
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  margin-bottom: 15px;
 }
 
 .nav a {
